<resources>
    <string name="app_name">PayPark</string>
    <string name="database_name" translatable="false">com_profjk_paypark_database</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="remember_me">Remember Me</string>
    <string name="create_account">Create Account</string>

    <string name="view_profile">View Profile</string>
    <string name="delete_account">Delete Account</string>
    <string name="sign_out">Sign Out</string>

    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone Number</string>
    <string name="car_plate_num">Car Plate Number</string>
    <string name="name_on_card">Name On Card</string>
    <string name="payment_info">Payment Information</string>
    <string name="card_number">Card Number</string>
    <string name="card_number_placeholder">XXXX-XXXX-XXXX-XXXX</string>
    <string name="cvv">CVV</string>
    <string name="cvv_placeholder">XXX</string>
    <string name="expiry">Expiry Date</string>
    <string name="expiry_placeholder">MM/YY</string>
    <string name="save">Save</string>

    <string name="gender">Gender</string>

    <string-array name="gender_array">
        <item>Female</item>
        <item>Male</item>
        <item>No Disclosure</item>
    </string-array>

    <string name="error_empty_password">Password cannot be empty</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_user_manual">User Manual</string>
    <string name="menu_support">Support</string>
    <string name="call">Call</string>

    <string name="building_code">Building Code</string>
    <string name="unit_number">Unit Number</string>
    <string name="parking_date">Parking Date</string>
    <string name="date_placeholder">DD/MM/YYYY</string>
    <string name="parking_duration">Parking Duration</string>
    <string name="parking_location">Parking Location</string>
    <string name="time_placeholder">HH:MM</string>
    <string name="datetime_placeholder">dd MMM YYYY hh:mm a</string>

    <string-array name="duration_array">
        <item>4 Hours</item>
        <item>8 Hours</item>
        <item>12 hours</item>
        <item> Daily Max</item>
    </string-array>

</resources>