<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!--    <item-->
<!--        android:id="@+id/action_settings"-->
<!--        android:orderInCategory="100"-->
<!--        android:title="@string/action_settings"-->
<!--        app:showAsAction="never" />-->

    <item
        android:id="@+id/action_view_profile"
        android:orderInCategory="1"
        app:showAsAction="never"
        android:title="@string/view_profile"
        />

    <item
        android:id="@+id/action_delete_account"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:title="@string/delete_account"/>

    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="3"
        app:showAsAction="never"
        android:title="@string/sign_out"/>
</menu>