<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.paypark.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_profile"
            app:destination="@id/nav_profile"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/nav_home"/>
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_support" />
        <action
            android:id="@+id/action_nav_home_to_nav_slideshow"
            app:destination="@id/nav_user_manual" />
        <action
            android:id="@+id/action_nav_home_to_add_parking_fragment"
            app:destination="@id/addParkingFragment"
            app:popUpTo="@id/nav_home"/>
        <action
            android:id="@+id/action_nav_home_to_fragment_camera_x"
            app:destination="@+id/fragment_camera_x"
            app:popUpTo="@layout/activity_home"/>

    </fragment>

    <fragment
        android:id="@+id/nav_support"
        android:name="com.example.paypark.ui.support.SupportFragment"
        android:label="@string/menu_support"
        tools:layout="@layout/fragment_support" />

    <fragment
        android:id="@+id/nav_user_manual"
        android:name="com.example.paypark.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_user_manual"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.paypark.ui.profile.ProfileFragment"
        android:label="View Profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/addParkingFragment"
        android:name="com.example.paypark.ui.addparking.AddParkingFragment"
        android:label="Add Parking"
        tools:layout="@layout/fragment_add_parking"
        />

    <fragment
        android:id="@+id/fragment_camera_x"
        android:name="com.example.paypark.ui.camera.CameraXFragment"
        android:label="Take picture"
        tools:layout="@layout/fragment_camera_x"/>

</navigation>