<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="2">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:id="@+id/tvDateParked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DD/MM/YYYY"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:layout_column="1"
            android:layout_span="2"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/building_code"
            android:layout_column="1"/>

        <TextView
            android:id="@+id/tvBuildingCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="#####"
            android:layout_column="2"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/unit_number"
            android:layout_column="1"/>

        <TextView
            android:id="@+id/tvUnitNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:layout_column="2"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginEnd="8dp"
            android:text="@string/parking_duration" />

        <TextView
            android:id="@+id/tvHoursParked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="##"
            android:layout_column="2"/>
    </TableRow>

</TableLayout>